Updated to GET endpoints
