# app/Http/Controllers/Impact/CalculateFoodImpactController.php
@@ -11,9 +11,9 @@ class CalculateFoodImpactController extends Controller
     public function __invoke(CalculateFoodImpactRequest $request)
     {
         // Each value will be a number between 0 and 4 (0 = 0%, 1 = 25%, 2 = 50%, 3 = 75%, 4 = 100%)
-        $organicAmount = $request->input('organic_amount') ?? 0;
-        $meatAmount = $request->input('meat_amount') ?? 0;
-        $locallyProducedAmount = $request->input('locally_produced_amount') ?? 0;
+        $organicAmount = $request->input('organicAmount') ?? 0;
+        $meatAmount = $request->input('meatAmount') ?? 0;
+        $locallyProducedAmount = $request->input('locallyProducedAmount') ?? 0;
 
         // Get rough estimates of emissions for each category (x1000 to get kg)
         $organicEmissions = round(0.25 * (3 - $organicAmount), 2) * 1000;
