# app/Http/Controllers/Impact/CalculateHouseholdImpactController.php
@@ -12,8 +12,8 @@ class CalculateHouseholdImpactController extends Controller
     {
         // Set values to UK averages if they aren't defined
         $occupants = $request->input('occupants'); // Is required, so no default value
-        $energyUsage = $request->input('energy_usage') ?? 3100 * ($occupants / 2); // in KWh (source: https://www.energy-uk.org.uk/energy-industry/watt-powers.html)
-        $gasUsage = $request->input('gas_usage') ?? 12000 * ($occupants / 2); // in KWh (source: https://selectra.co.uk/energy/guides/consumption/average-consumption-uk)
+        $energyUsage = $request->input('energyUsage') ?? 3100 * ($occupants / 2); // in KWh (source: https://www.energy-uk.org.uk/energy-industry/watt-powers.html)
+        $gasUsage = $request->input('gasUsage') ?? 12000 * ($occupants / 2); // in KWh (source: https://selectra.co.uk/energy/guides/consumption/average-consumption-uk)
 
         // CO2 emissions factor for electricity = 0.309 kg / kWh
         $energyEmissions = round($energyUsage * 0.309, 2);
